# cursdoku

./: .gitignore  CMakeLists.txt  Makefile  main.c  menu.c  menu.h  sudoku.c  sudoku.h  sudoku_ui.c  window.h
include/: sudoku_ui.h
src/: main.c  sudoku.c  sudoku_ui.c  window.c
